# InstagramSkill

./: .gitattributes  .gitignore  CONTRIBUTING.md  PARAMETROS.md  README.md  SKILL.md  TOOLS.md  generar.py  pyproject.toml
agents/: openai.yaml
examples/: amenaza-ia-ciberseguridad.json  brand-hud-template.json  carousel-auto-request.json  carousel-request.json  chatbots-vs-agentes.json  ia-observabilidad-aiops.json  ingenieros-virtuales-24-7.json
ig-tech-avatar-posts/: SKILL.md
ig-tech-avatar-posts/references/: avatar-pack.md  brand-tokens.md  layout-left.html  layout-right.html  layouts.md  prompt-blocks.md
skill/ig-tech-avatar-posts/: SKILL.md
skill/ig-tech-avatar-posts/references/: avatar-pack.md  carousel-structure.md  copy-formulas.md  layouts.md  master-composition-templates.md
skill/ig-tech-avatar-posts/scripts/: make_post_spec.py
tools/scripts/: create_slides_from_json.py  export_carousel_images.py  export_jpg_from_json.py  render_carousel_pngs.py  split_carousel_html.py  validate_repo.py
