[project]
name = "instagram-skill"
version = "0.1.0"
description = "Codex skill and tooling for tech Instagram carousels with a consistent avatar system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

